@@ -1,3 +1,7 @@
+Wed Oct 13 12:05:12 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>
+
+	* port-marshaled-queue.rb: BUG#265対応(その6)
+
 Tue Oct 12 19:10:38 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>
 
 	* port-marshaled-queue.rb: BUG#265対応(その5)
